# smart_zone_server

./: CMakeLists.txt  Eagles.db  README.md  main.cpp  smart_zone_server.sh
dbServer/: CMakeLists.txt  Eagles.db  Makefile  buildAndRun.sh  dbServer  main.cpp  testServer  testServer.cpp
dbServer/inc/: HttpServer.h  RequestHandler.h  database.h
dbServer/src/: HttpServer.cpp  RequestHandler.cpp  database.cpp
inc/: define.h  httpServer.h  mainDB.h
include/: define.h  httpClient.h  httpServer.h  mainDB.h
source/: httpClient.cpp  httpServer.cpp  mainDB.cpp
src/: .httpServer.cpp.swp  httpClient.cpp  httpServer.cpp  mainDB.cpp
